--- a/Project/web/index.html
+++ b/Project/web/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">EcoHarbor</a></h1>
+        <h1><a href="./index.html" class="scrollto">EcoHarbor</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -52,7 +52,8 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="Guest/Login.jsp">Login</a></li>
+          <li><a href="Guest/Login.jsp">Login</a>
+          <li><a href="Guest/UserRegistration.jsp">Sign up</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#cont">Contact</a></li>
@@ -257,8 +258,8 @@
         <h3>Call To Action</h3>
         <p>
             Join us in creating a positive impact! Join our initiative to build a cleaner, more sustainable future for Avoly and inspire rural communities worldwide.</p>
-        <a class="cta-btn" href="#">Login</a>
-        <a class="cta-btn" href="#">Sign Up</a>
+        <a class="cta-btn" href="Guest/Login.jsp">Login</a>
+        <a class="cta-btn" href="Guest/ag.jsp">Sign Up</a>
       </div>
     </section><!-- #call-to-action -->
 
@@ -278,22 +279,22 @@
         <div class="row counters">
 
   				<div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">274</span>
+            <span >274</span>
             <p>Clients</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">489</span>
+            <span >489</span>
             <p>Discarded Wastes</p>
          </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
+            <span >1,364</span>
             <p>Hours Of Support</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">18</span>
+            <span >18</span>
             <p>Eco Guardians</p>
   				</div>
 
@@ -325,8 +326,8 @@
               <li><i class="ion-ios-arrow-right"></i> <a href="#intro">Home</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#about">About us</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#services">Services</a></li>
-              <li><i class="ion-ios-arrow-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="ion-ios-arrow-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="ion-ios-arrow-right"></i> <a href="#call-to-action">Call to action</a></li>
+              <li><i class="ion-ios-arrow-right"></i> <a href="#facts">Facts</a></li>
             </ul>
           </div>
 
@@ -344,8 +345,7 @@
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+         
             </div>
 
           </div>
